layout: fix restaurant details page, have map stretch full width and stack restaurant name and details below

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,8 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -71,7 +73,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: 100;
 }
 
 /* Display list items side by side */
@@ -98,11 +100,18 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
+
+#map-container{
+  width:100%;
+  height:400px;
+}
+
 #map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
@@ -192,29 +201,27 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+.wrapper {
+	display:flex;
+ 	justify-content: center;
+	align-items:center;
+	flex-direction:column;
+}
 .inside header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
 }
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
-}
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
+  margin-top:130px;
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -227,7 +234,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 75%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -243,16 +250,22 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 75%;
 }
-#restaurant-container, #reviews-container {
+#restaurant-container{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  padding-top:2em;
+	margin-top: 150px;
+}
+#reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
   width: 50%;
-}
-#reviews-container {
-  padding: 30px 40px 80px;
 }
 #reviews-container h2 {
   color: #f58500;
